--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "bin-dir": "bin"
     },
     "autoload": {
-        "files": ["Client.php", "Connection.php"]
+        "psr-0": {
+            "Marketplace": "src"
+        }
     }
 }
