Moving Tests to tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,9 @@
 <phpunit
-    bootstrap="./Tests/bootstrap.php"
+    bootstrap="./tests/bootstrap.php"
     colors="true">
     <testsuites>
         <testsuite name="Marketplace.PHP">
-            <directory>./Tests/</directory>
+            <directory>./tests/</directory>
         </testsuite>
     </testsuites>
 </phpunit>
